add events, edit events, add event collection, edit event collection

--- a/NIBM EVENTS-AKT-DE-SILVA-COBSCCOMP182P027/Stroryboards/LoginStoryboard.storyboard
+++ b/NIBM EVENTS-AKT-DE-SILVA-COBSCCOMP182P027/Stroryboards/LoginStoryboard.storyboard
@@ -22,23 +22,23 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="sKb-kv-XiB">
-                                <rect key="frame" x="20" y="108" width="374" height="405"/>
+                                <rect key="frame" x="20" y="108" width="374" height="408"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NIBM EVENTS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whf-zF-XJN">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="47"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                         <color key="backgroundColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="43"/>
+                                        <fontDescription key="fontDescription" name="GillSans-BoldItalic" family="Gill Sans" pointSize="43"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDZ-Y2-thr">
-                                        <rect key="frame" x="0.0" y="59" width="374" height="39"/>
+                                        <rect key="frame" x="0.0" y="62" width="374" height="39"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="30"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OE1-d4-Sgh">
-                                        <rect key="frame" x="0.0" y="110" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="113" width="374" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="GAb-GD-EQH"/>
                                         </constraints>
@@ -47,7 +47,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mlp-Sy-l2M">
-                                        <rect key="frame" x="0.0" y="162" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="165" width="374" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="m6P-X3-z7g"/>
                                         </constraints>
@@ -56,7 +56,7 @@
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hnD-uE-Yco">
-                                        <rect key="frame" x="0.0" y="214" width="374" height="35"/>
+                                        <rect key="frame" x="0.0" y="217" width="374" height="35"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <state key="normal" title="Forgot password?">
                                             <color key="titleColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -66,7 +66,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KQd-1l-vml" customClass="RoundedButton" customModule="NIBM_EVENTS_AKT_DE_SILVA_COBSCCOMP182P027" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="261" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="264" width="374" height="40"/>
                                         <color key="backgroundColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="uGe-HI-I2H"/>
@@ -80,7 +80,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Kh-Cu-JAa" customClass="RoundedButton" customModule="NIBM_EVENTS_AKT_DE_SILVA_COBSCCOMP182P027" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="313" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="316" width="374" height="40"/>
                                         <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="z1g-Dz-hSd"/>
@@ -94,7 +94,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQz-zX-IcK" customClass="RoundedButton" customModule="NIBM_EVENTS_AKT_DE_SILVA_COBSCCOMP182P027" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="365" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="368" width="374" height="40"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="NBM-Hu-I1n"/>
@@ -110,7 +110,7 @@
                                 </subviews>
                             </stackView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="khA-BZ-lFv">
-                                <rect key="frame" x="188.5" y="321" width="37" height="37"/>
+                                <rect key="frame" x="188.5" y="324" width="37" height="37"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -196,7 +196,7 @@
                                         <rect key="frame" x="0.0" y="240" width="374" height="40"/>
                                         <color key="backgroundColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="t0l-vz-CeR"/>
+                                            <constraint firstAttribute="height" constant="40" id="Dt4-Go-Hhb"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <state key="normal" title="Register">
@@ -211,10 +211,10 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="A5t-aw-JmK">
                                 <rect key="frame" x="189" y="527" width="37" height="37"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g3w-ku-ASo">
-                                <rect key="frame" x="139.5" y="201" width="135.5" height="53"/>
-                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="31"/>
-                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g3w-ku-ASo">
+                                <rect key="frame" x="20" y="108" width="374" height="47.5"/>
+                                <fontDescription key="fontDescription" name="GillSans-BoldItalic" family="Gill Sans" pointSize="41"/>
+                                <color key="textColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red_check" translatesAutoresizingMaskIntoConstraints="NO" id="4GZ-2f-f4O">
@@ -234,22 +234,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="g3w-ku-ASo" firstAttribute="top" secondItem="iIc-5j-jgp" secondAttribute="top" constant="113" id="43Y-pn-bui"/>
+                            <constraint firstItem="g3w-ku-ASo" firstAttribute="centerX" secondItem="BSE-Th-ulA" secondAttribute="centerX" id="3Z8-vB-S3x"/>
                             <constraint firstItem="QWu-tw-Rl2" firstAttribute="leading" secondItem="BSE-Th-ulA" secondAttribute="leading" id="6ot-39-PQb"/>
                             <constraint firstAttribute="bottom" secondItem="QWu-tw-Rl2" secondAttribute="bottom" id="76D-pG-Sb3"/>
                             <constraint firstAttribute="trailing" secondItem="QWu-tw-Rl2" secondAttribute="trailing" id="7iI-BV-VRn"/>
+                            <constraint firstItem="g3w-ku-ASo" firstAttribute="top" secondItem="iIc-5j-jgp" secondAttribute="top" constant="20" id="8NV-d6-wkj"/>
                             <constraint firstItem="4GZ-2f-f4O" firstAttribute="centerY" secondItem="10T-K2-7G8" secondAttribute="centerY" id="D1V-vp-0C2"/>
-                            <constraint firstItem="DIq-VZ-jdM" firstAttribute="top" secondItem="g3w-ku-ASo" secondAttribute="bottom" constant="31" id="DOr-dC-4Ho"/>
                             <constraint firstItem="4GZ-2f-f4O" firstAttribute="trailing" secondItem="10T-K2-7G8" secondAttribute="trailing" constant="-6" id="Djn-WR-Jdb"/>
                             <constraint firstItem="DIq-VZ-jdM" firstAttribute="leading" secondItem="BSE-Th-ulA" secondAttribute="leadingMargin" id="H4w-IZ-huF"/>
                             <constraint firstItem="DIq-VZ-jdM" firstAttribute="centerX" secondItem="A5t-aw-JmK" secondAttribute="centerX" id="LtJ-Ry-bG9"/>
+                            <constraint firstItem="iIc-5j-jgp" firstAttribute="trailing" secondItem="g3w-ku-ASo" secondAttribute="trailing" constant="20" id="Qnf-cH-V7h"/>
                             <constraint firstItem="iIc-5j-jgp" firstAttribute="bottom" secondItem="A5t-aw-JmK" secondAttribute="bottom" constant="298" id="TX4-i0-5Ek"/>
                             <constraint firstItem="wdi-IW-3el" firstAttribute="trailing" secondItem="DB5-iR-Kj5" secondAttribute="trailing" constant="-6" id="Tca-u1-aUk"/>
-                            <constraint firstItem="g3w-ku-ASo" firstAttribute="centerX" secondItem="A5t-aw-JmK" secondAttribute="centerX" id="WMS-Yr-xdj"/>
                             <constraint firstItem="wdi-IW-3el" firstAttribute="centerY" secondItem="DB5-iR-Kj5" secondAttribute="centerY" id="Y4d-nf-skz"/>
                             <constraint firstItem="iIc-5j-jgp" firstAttribute="bottom" secondItem="DIq-VZ-jdM" secondAttribute="bottom" constant="297" id="bvg-jW-h2F"/>
                             <constraint firstItem="QWu-tw-Rl2" firstAttribute="centerX" secondItem="A5t-aw-JmK" secondAttribute="centerX" id="jMf-yi-CjG"/>
                             <constraint firstItem="QWu-tw-Rl2" firstAttribute="top" secondItem="iIc-5j-jgp" secondAttribute="top" id="ob9-Q9-jI8"/>
+                            <constraint firstItem="g3w-ku-ASo" firstAttribute="leading" secondItem="iIc-5j-jgp" secondAttribute="leading" constant="20" id="y5i-TB-Gv2"/>
                             <constraint firstItem="A5t-aw-JmK" firstAttribute="leading" secondItem="iIc-5j-jgp" secondAttribute="leading" constant="189" id="ynX-1o-eno"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="iIc-5j-jgp"/>
